
set(PROTO_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/simple.proto
    ${CMAKE_CURRENT_SOURCE_DIR}/header.proto
    ${CMAKE_CURRENT_SOURCE_DIR}/search.proto    
)

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS
    ${PROTO_FILES})

message(STATUS "PROTO_SRCS: ${PROTO_SRCS}")
message(STATUS "PROTO_HDRS: ${PROTO_HDRS}")

add_library(${PROTOBUF_LIB_NAME} SHARED ${PROTO_SRCS})
target_link_libraries(${PROTOBUF_LIB_NAME} ${PROTOBUF_LIBRARIES})
